[gd_scene load_steps=18 format=3 uid="uid://drsay6p2bovok"]

[ext_resource type="Texture2D" uid="uid://b5kkctktu5s02" path="res://Assets/Tiles/missle.png" id="1_oi0p2"]
[ext_resource type="Script" path="res://Scenes/Weapons/Projectiles/MissileComponent.gd" id="1_speg4"]
[ext_resource type="Texture2D" uid="uid://4it6irjhcfv7" path="res://Assets/Tiles/missletail.png" id="2_5li8h"]
[ext_resource type="Texture2D" uid="uid://52r27ap08123" path="res://Assets/Tiles/missleexplosion.png" id="3_h0a8o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s6efi"]
atlas = ExtResource("2_5li8h")
region = Rect2(0, 0, 8, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_kimv2"]
atlas = ExtResource("2_5li8h")
region = Rect2(8, 0, 8, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_knvxe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6efi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kimv2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xc2dy"]
atlas = ExtResource("3_h0a8o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v5px"]
atlas = ExtResource("3_h0a8o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxkl2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc2dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v5px")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bryt6"]
size = Vector2(12, 6)

[sub_resource type="Animation" id="Animation_pki7w"]
resource_name = "MissileExplosion"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MissileExplosionSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-8.13333, -0.133333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_hj7lm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MissileExplosionSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ikqn2"]
_data = {
"MissileExplosion": SubResource("Animation_pki7w"),
"RESET": SubResource("Animation_hj7lm")
}

[sub_resource type="Animation" id="Animation_wr55f"]
resource_name = "ExhaustFlicker"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MissileSprite/ExhaustSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.25, 0.34, 0.44, 0.56, 0.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_xfpsc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MissileSprite/ExhaustSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcfkp"]
_data = {
"ExhaustFlicker": SubResource("Animation_wr55f"),
"RESET": SubResource("Animation_xfpsc")
}

[node name="MissileComponent" type="Area2D"]
script = ExtResource("1_speg4")

[node name="MissileSprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("1_oi0p2")
offset = Vector2(0, -3)

[node name="ExhaustSprites" type="AnimatedSprite2D" parent="MissileSprite"]
texture_filter = 1
position = Vector2(2.38421e-07, 2.33333)
scale = Vector2(1, 0.833333)
sprite_frames = SubResource("SpriteFrames_knvxe")

[node name="MissileExplosionSprites" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_lxkl2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_bryt6")

[node name="MissileExplosionAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ikqn2")
}

[node name="ExhaustFlickerAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pcfkp")
}
